Fixed lingering hover state on language toggles that was happening on mobile only

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -25,6 +25,7 @@ $green-outline: #315F5F;
 $grey: #B3B3B3;
 $text: rgba(255, 255, 255, 1);
 $toggle-on:rgba(255, 255, 255, 1);
+$toggle-hover: rgba(255, 255, 255, 0.7);
 $toggle-off: rgba(255, 255, 255, 0.5);
 $link: #FFE977;
 $link-hover: #FFEE96;
